--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.21.2
   flutter_localizations:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
   intl: any
+  riverpod_annotation: ^2.6.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  riverpod_generator: ^2.6.5
+  build_runner: ^2.5.4
+  custom_lint: ^0.7.5
+  riverpod_lint: ^2.6.5
 
 flutter:
   uses-material-design: true
