--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_hooks: ^0.21.2
   flutter_localizations:
     sdk: flutter
+  flutter_otp_text_field: ^1.5.1+1
   flutter_riverpod: ^2.6.1
   intl: any
   riverpod_annotation: ^2.6.1
