--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,3 +33,9 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/fonts/
+
+  fonts:
+    - family:  Roboto
+      fonts:
+        - asset: assets/fonts/roboto.ttf
