Auth api services added
- Authantication api added
- riverpod provider used
- phone number verification and otp verification added
- otp resend api some issues shows
- android manifest some changes added for acces storage for profile images

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Ignore generated files
+**/*.g.dart
+**/*.freezed.dart
+
+# Ignore keys
+lib/api_key/api_key.dart
