--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.9.0-196.1.beta
 
 dependencies:
+  dio: ^5.9.0
   flutter:
     sdk: flutter
   flutter_hooks: ^0.21.2
@@ -14,7 +15,10 @@ dependencies:
     sdk: flutter
   flutter_otp_text_field: ^1.5.1+1
   flutter_riverpod: ^2.6.1
+  image_picker: ^1.1.2
   intl: any
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
   riverpod_annotation: ^2.6.1
   shared_preferences: ^2.5.3
 
